# PrivateAI

./: .dockerignore  .env.hosted.example  .env.prod.example  .gitignore  API_Spec.md  BRANCH_EXPLAINER.md  CHANGES.md  Caddyfile  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.local  Dockerfile.prod  HOSTED.md  LICENSE  README.md  SECURITY_AUDIT.md  UI_IMPLEMENTATION_SPEC.md  docker-compose.hosted.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  railway.json  start-dev.sh  start-prod.sh  technical_explainer.md
backend/: .env.example  Dockerfile  azure_python_sdk_research.md  main.py  pyproject.toml  requirements.txt  testing_procedure.md  testing_procedure_cheap_vps.md
backend/app/: __init__.py
backend/app/models/: __init__.py  cost.py  credentials.py  deployment.py  open_webui.py  schemas.py  user.py
backend/app/providers/: __init__.py  base.py  registry.py
backend/app/routers/: auth.py  azure_cli.py  cost.py  deployments.py  open_webui.py  providers.py  services.py  terminal.py  vault.py
backend/scripts/: run_phase3_fast.sh
backend/tests/: conftest.py  live_test_utils.py  test_api.py  test_azure_cli_auth.py  test_azure_cli_router.py  test_azure_cli_setup.py  test_cheap_vm.py  test_deployment_store.py  test_dry_run.py  test_lint.py  test_open_webui_manager.py  test_phase3_negative_inputs.py  test_phase3_network_restrictions.py  test_phase3_recovery_paths.py  test_phase3_sdk_assertions.py  test_phase3_setup_ollama.py  test_phase3_setup_ollama_webui.py  test_teardown.py  test_validate_remote.py
docs/: API_Spec.md  (+6 more)
(+105 files in other folders)
